// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders markup with state 1`] = `
<ng-ais-menu
  limit={[Function Number]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    <ng-ais-header
      classname="ais-Menu-header ais-header"
      ng-reflect-class-name="ais-Menu-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-Menu-body ais-body"
    >
      
          
      <ul
        class="ais-Menu-list"
      >
        
            
        
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                foo
                
            <span
              class="ais-Menu-count"
            >
              2
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                bar
                
            <span
              class="ais-Menu-count"
            >
              3
            </span>
            
              
          </a>
          
            
        </li>
        <li
          class="ais-Menu-item"
        >
          
              
          <a
            href=""
          >
            
                foobar
                
            <span
              class="ais-Menu-count"
            >
              4
            </span>
            
              
          </a>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-Menu-footer ais-footer"
      ng-reflect-class-name="ais-Menu-footer ais-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu renders markup without state 1`] = `
<ng-ais-menu
  limit={[Function Number]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    <ng-ais-header
      classname="ais-Menu-header ais-header"
      ng-reflect-class-name="ais-Menu-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-Menu-body ais-body"
    >
      
          
      <ul
        class="ais-Menu-list"
      >
        
            
        
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-Menu-footer ais-footer"
      ng-reflect-class-name="ais-Menu-footer ais-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-menu>
`;
